# windows-capture-zone

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  app.graphics.ixx  app.layout.ixx  app.rc  app.settings.ixx  app.types.ixx  app.windows.ixx  build.md  main.cpp  resource.h  resources.rc
.github/workflows/: release.yml
